force-app/main/default/objects/Condition_Group__c/Condition_Group__c.object-meta.xml
<CustomObject>
    <label>Condition Group</label>
    <nameField>
        <label>Condition Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Condition Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>