force-app/main/default/objects/Condition_Group__c/fields/Approval_Step__c.field-meta.xml
<CustomField>
    <fullName>Approval_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval Step</label>
    <referenceTo>Approval_Step__c</referenceTo>
    <relationshipLabel>Condition Groups</relationshipLabel>
    <relationshipName>Condition_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>