force-app/main/default/objects/Condition_Group__c/fields/Conditional_Logic__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Logic__c</fullName>
    <label>Conditional Logic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>