force-app/main/default/objects/Condition_Group__c/fields/Display_Configuration__c.field-meta.xml
<CustomField>
    <fullName>Display_Configuration__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Display Configuration</label>
    <referenceTo>Display_Configuration__c</referenceTo>
    <relationshipLabel>Condition Groups</relationshipLabel>
    <relationshipName>Condition_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>