force-app/main/default/objects/Condition_Group__c/fields/Request_Approval_Step__c.field-meta.xml
<CustomField>
    <fullName>Request_Approval_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Request Approval Step</label>
    <referenceTo>Request_Approval_Step__c</referenceTo>
    <relationshipLabel>Condition Groups</relationshipLabel>
    <relationshipName>Condition_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>