force-app/main/default/objects/Condition_Group__c/fields/Service_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Service_Pricing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Pricing</label>
    <referenceTo>Service_Pricing__c</referenceTo>
    <relationshipLabel>Condition Groups</relationshipLabel>
    <relationshipName>Condition_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>